改进最终版
可以显示文字了

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -88,8 +88,8 @@
      <Compile Include="Assets\GoogleVR\Scripts\UI\GvrReticle.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\UI\IGvrGazePointer.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\UI\IGvrGazeResponder.cs" />
+     <Compile Include="Assets\MyAssets\Scripts\Building.cs" />
      <Compile Include="Assets\MyAssets\Scripts\GameController.cs" />
-     <Compile Include="Assets\MyAssets\Scripts\buildings.cs" />
      <None Include="Assets\GoogleVR\Distortion\GvrDistortion.cginc" />
      <None Include="Assets\GoogleVR\Legacy\Resources\UnlitTexture.shader" />
      <None Include="Assets\Plugins\Android\AndroidManifest.xml" />
